# helixcore

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  helixcore_diag.py  pyproject.toml  system-overview.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: GETTING_STARTED.md  HELIXCORE_IN_30_MINUTES.md  HelixCore_Public_Readiness_Summary_2026-06-07.md  ULTIMATE_STRESS_TEST.md  golden_paths_quick_reference.md
examples/: simple_claude_dogfood.py
examples/semantic/: sample_memories.jsonl
examples/synaptic/: sample_synapses.jsonl
helixcore/: __init__.py  __version__.py  agent_tracer.py  discipline_enforcement.py  evaluation_harness.py  golden_paths.py  local_code_intel.py  local_semantic_memory.py  local_serendipity.py
helixcore/orchestrator_mcp/: __init__.py  anti_runaway.py  governance.py  live_state.py  nudges.py  power_router.py  safety.py
tests/: test_memory_regression.py
