[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helixcore"
version = "0.3.0"
description = "Portable governed agentic patterns for disciplined, observable, self-improving AI workflows. Works standalone or on top of LangGraph, CrewAI, Claude, custom agents, etc."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "MrSilhouette"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Goliaith/helixcore"
Documentation = "https://github.com/Goliaith/helixcore/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.setuptools]
include-package-data = true
